...
        android:layout_height="403dp"
        android:layout_margin="20dp"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="10dp"
        android:background="#7546C9"
        app:layout_constraintBottom_toTopOf="@+id/WSAstopWalk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
...
